-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    3.1b2

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2006 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 3.1b2
-------------------

7/6/07
    - Added ability in opf.m and fmincopf.m to specify initial value
      and bounds on user variables via new input arguments z0, zl, zh.

6/22/07
    - INCOMPATIBLE CHANGE: Name of option 24 in mpoption change from
      OPF_P_LINE_LIM to OPF_FLOW_LIM.
    - Added option to use current magnitude instead of apparent power
      for line flow limits. Set OPF_FLOW_LIM to 2.

6/21/07
    - INCOMPATIBLE CHANGE: Changed the sign convention used for
      phase shifters to be consistent with PTI, PowerWorld, PSAT, etc.
      E.g. A phase shift of 10 deg now means the voltage at the "to"
      end is delayed by 10 degrees.

6/15/07
    - Added t_auction_pdipm.m and renamed t_auction.m to
      t_auction_minopf.m.

6/8/07
    - Updated have_fcn.m to check for appropriate minimum versions of
      Matlab, for TSPOPF.

6/7/07
    - Modified printpf.m to correctly detect binding line limits when
      a limit of 0 is taken to mean unconstrained.
    - Fixed bugs in handling of multipliers for general PQ capability
      curves in fmincopf.m (also in mopf.m and tspopf.m).
    - Refactored t_opf.m into separate files for each solver.
    - Modified opf.m, mpoption.m, mpver.m, have_fcn.m to include
      support for TSPOPF, a new optional package of OPF solvers.

9/29/06
    - Added check to runpf.m for case where all gens hit Q limits when
      ENFORCE_Q_LIMS is enabled.


Changes since 3.1b1
-------------------

9/15/06
    - Released version 3.1b2.

9/12/06
    - Added makePDFT.m which builds the DC PTDF matrix for a specified
      slack distribution.

8/16/06